# iced-webview

./: .gitignore  Cargo.toml  README.md
.zed/: debug.json  tasks.json
examples/: Info.plist  icy_cef.rs  mac_bundler.rs  webview.rs
src/: backend.rs  browser.rs  client.rs  error.rs  instance.rs  lib.rs  render_process.rs  request.rs  settings.rs  task.rs  v8.rs  webview.rs
src/backend/: context_menu.rs  keyboard.rs  lifespan.rs  load.rs  render.rs  request_context.rs
src/client/: context_menu_handler.rs  display_handler.rs  keyboard_handler.rs  lifespan_handler.rs  load_handler.rs  render_handler.rs
