[package]
name = "iced-webview"
version = "0.1.0"
edition = "2024"

[dependencies]
cef = "137"
iced = { git = "https://github.com/iced-rs/iced", features = ["tokio", "advanced", "lazy", "image"] }
iced_core = { git = "https://github.com/iced-rs/iced" }
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }
camino = "1"
url = "2"
atomic-take = "1"
thiserror = "1"
tokio-stream = "0"
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
either = "1"

[dev-dependencies]
anyhow = "1"

[[example]]
name = "webview"
path = "examples/webview.rs"
